@@ -2,12 +2,14 @@ package com.channel.analysis.security;
 
 import com.channel.analysis.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -19,6 +21,8 @@ public class UserDetailsServiceImpl implements UserDetailsService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         com.channel.analysis.entity.User user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
-        return new User(user.getUsername(), user.getPassword(), Collections.emptyList());
+        String roleName = user.getRole() != null ? user.getRole() : "USER";
+        GrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + roleName);
+        return new User(user.getUsername(), user.getPassword(), List.of(authority));
     }
 }
